# apriltag_reader

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: apriltag_reader.launch~  apriltag_reader_husky.launch  apriltag_reader_husky.launch~  apriltag_reader_scout.launch
scripts/: apriltag_reader.py  apriltag_reader.py~  apriltag_reader_continuous.py
