<?xml version="1.0"?>
<package format="2">
  <name>apriltag_reader</name>
  <version>0.0.1</version>
  <description>The apriltag_reader package</description>

  <maintainer email="yiannismaxwell@gmail.com">Yiannis Maxwell</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>apriltag</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>apriltag</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>apriltag</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
